<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray"
    android:orientation="vertical" >
  
        
        <Button 
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:paddingLeft="30dp"
            android:paddingRight="15dp"
            android:gravity="center_vertical"
            android:background="@android:color/white"
            android:text="@string/btn_edit_profile"/>
        
        <View 
            android:layout_width="310dp"
            android:layout_height="1dp"           
            android:layout_gravity="center_horizontal"
            android:background="@color/text_grey"/>
        
        <Button 
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingLeft="30dp"
            android:paddingRight="15dp"
            android:gravity="center_vertical"
            android:background="@android:color/white"
            android:text="@string/btn_account_setting" />
 
    
	    <Button 
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingLeft="30dp"
            android:paddingRight="15dp"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:background="@android:color/white"
	        android:text="@string/btn_notification"/>
    
    	<Button 
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:paddingLeft="30dp"
            android:paddingRight="15dp"
            android:gravity="center_vertical"
            android:background="@android:color/white"
            android:text="@string/btn_policy"/>
        
        <View 
            android:layout_width="310dp"
            android:layout_height="1dp"           
            android:layout_gravity="center_horizontal"
            android:background="@color/text_grey"/>
        
        <Button 
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingLeft="30dp"
            android:paddingRight="15dp"
            android:gravity="center_vertical"
            android:background="@android:color/white"
            android:text="@string/btn_qa"/>
    
		<Button 
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingLeft="30dp"
            android:paddingRight="15dp"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:background="@android:color/white"
	        android:text="Rate us in app store"/>
		
		
		<Button 
		    android:layout_width="match_parent"
		    android:layout_height="50dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
		    android:layout_marginTop="30dp"
		    android:layout_gravity="center_horizontal"
		    android:background="@color/btn_bg_red"
		    android:textColor="@android:color/white"
		    android:text="Log out"
            android:id="@+id/btn_setting_out" />
    
</LinearLayout>
