<?xml version="1.0"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/fragment_background"
              android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout_mine_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="12dp">

        <com.azhuoinfo.cqurity.view.imageview.round.RoundedImageView
            android:id="@+id/imageview_mine_avatar"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginRight="12dp"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_user_default"
            app:border_color="@android:color/white"
            app:border_width="2dp"
            app:oval="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textview_mine_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/test"
                android:textColor="@color/text_black"/>

            <TextView
                android:id="@+id/textview_mine_org"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/test"
                android:textColor="@color/text_grey"/>

            <TextView
                android:id="@+id/textview_mine_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/test"
                android:textColor="@color/text_grey"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/imageview_mine_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_push_arrow"/>
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:gravity="center"
        android:text="@string/mine_text_start"
        android:textColor="@color/text_black"></TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <LinearLayout
            android:id="@+id/layout_mine_new"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@android:color/white"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textview_mine_new"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_launcher"
                android:gravity="center_vertical"
                android:layout_marginLeft="30dp"
                android:drawablePadding="20dp"
                android:text="@string/test"
                android:textColor="@color/text_black"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_mine_explore"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="12dp"
            android:background="@android:color/white"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textview_mine_explore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_launcher"
                android:gravity="center_vertical"
                android:layout_marginLeft="30dp"
                android:drawablePadding="20dp"
                android:text="@string/test"
                android:textColor="@color/text_black"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>